// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`create-a-github-issue checks the value of search_existing 1`] = `
{
  "assignees": [
    "octocat",
    "JasonEtco",
  ],
  "body": "Goodbye!",
  "labels": [],
  "milestone": 1,
  "title": "Hello!",
}
`;

exports[`create-a-github-issue checks the value of update_existing 1`] = `
{
  "assignees": [
    "octocat",
    "JasonEtco",
  ],
  "body": "Goodbye!",
  "labels": [],
  "milestone": 1,
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue 1`] = `
{
  "assignees": [],
  "body": "Goodbye!",
  "labels": [],
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue 2`] = `
[
  [
    "Created issue Hello!#1: www",
  ],
]
`;

exports[`create-a-github-issue creates a new issue from a different template 1`] = `
{
  "assignees": [],
  "body": "Goodbye!",
  "labels": [],
  "title": "Different file",
}
`;

exports[`create-a-github-issue creates a new issue from a different template 2`] = `
[
  [
    "Created issue Different file#1: www",
  ],
]
`;

exports[`create-a-github-issue creates a new issue when updating existing issues is enabled but no issues with the same title exist 1`] = `
{
  "assignees": [
    "octocat",
    "JasonEtco",
  ],
  "body": "Goodbye!",
  "labels": [],
  "milestone": 1,
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue with a milestone passed by input 1`] = `
{
  "assignees": [
    "octocat",
    "JasonEtco",
  ],
  "body": "Goodbye!",
  "labels": [],
  "milestone": 1,
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue with an assignee passed by input 1`] = `
{
  "assignees": [
    "octocat",
  ],
  "body": "Goodbye!",
  "labels": [],
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue with an assignee passed by input 2`] = `
[
  [
    "Created issue Hello!#1: www",
  ],
]
`;

exports[`create-a-github-issue creates a new issue with assignees and labels as comma-delimited strings 1`] = `
{
  "assignees": [
    "JasonEtco",
    "matchai",
  ],
  "body": "The action create-a-github-issue is the best action.",
  "labels": [
    "bug",
    "enhancement",
  ],
  "title": "DO EVERYTHING",
}
`;

exports[`create-a-github-issue creates a new issue with assignees and labels as comma-delimited strings 2`] = `
[
  [
    "Created issue DO EVERYTHING#1: www",
  ],
]
`;

exports[`create-a-github-issue creates a new issue with assignees, labels and a milestone 1`] = `
{
  "assignees": [
    "JasonEtco",
  ],
  "body": "The action create-a-github-issue is the best action.",
  "labels": [
    "bugs",
    "foo",
  ],
  "milestone": 2,
  "title": "DO EVERYTHING foo",
}
`;

exports[`create-a-github-issue creates a new issue with assignees, labels and a milestone 2`] = `
[
  [
    "Created issue DO EVERYTHING foo#1: www",
  ],
]
`;

exports[`create-a-github-issue creates a new issue with multiple assignees passed by input 1`] = `
{
  "assignees": [
    "octocat",
    "JasonEtco",
  ],
  "body": "Goodbye!",
  "labels": [],
  "title": "Hello!",
}
`;

exports[`create-a-github-issue creates a new issue with multiple assignees passed by input 2`] = `
[
  [
    "Created issue Hello!#1: www",
  ],
]
`;

exports[`create-a-github-issue creates a new issue with some template variables 1`] = `
{
  "assignees": [],
  "body": "The action create-a-github-issue is the best action.

Environment variable foo is great.
",
  "labels": [],
  "title": "Hello create-a-github-issue",
}
`;

exports[`create-a-github-issue creates a new issue with some template variables 2`] = `
[
  [
    "Created issue Hello create-a-github-issue#1: www",
  ],
]
`;

exports[`create-a-github-issue creates a new issue with the context.repo template variables 1`] = `
{
  "assignees": [],
  "body": "Are you looking for results on our gh-pages branch?

Just click this link! https://JasonEtco.github.io/waddup/path/to/my/pageindex.html
",
  "labels": [],
  "title": "This Issue has a generalizable GitHub Pages Link",
}
`;

exports[`create-a-github-issue creates a new issue with the context.repo template variables 2`] = `
[
  [
    "Created issue This Issue has a generalizable GitHub Pages Link#1: www",
  ],
]
`;

exports[`create-a-github-issue finds, but does not update an existing issue with the same title 1`] = `
{
  "assignees": [
    "octocat",
    "JasonEtco",
  ],
  "body": "Goodbye!",
  "labels": [],
  "milestone": 1,
  "title": "Hello!",
}
`;

exports[`create-a-github-issue logs a helpful error if creating an issue throws an error 1`] = `
[
  [
    "An error occurred while creating the issue. This might be caused by a malformed issue title, or a typo in the labels or assignees. Check .github/ISSUE_TEMPLATE.md!",
  ],
  [
    [HttpError: Validation error],
  ],
]
`;

exports[`create-a-github-issue logs a helpful error if creating an issue throws an error with more errors 1`] = `
[
  [
    "An error occurred while creating the issue. This might be caused by a malformed issue title, or a typo in the labels or assignees. Check .github/ISSUE_TEMPLATE.md!",
  ],
  [
    [HttpError: Validation error: {"foo":true}],
  ],
]
`;

exports[`create-a-github-issue logs a helpful error if updating an issue throws an error with more errors 1`] = `
[
  [
    "An error occurred while updating the issue. This might be caused by a malformed issue title, or a typo in the labels or assignees. Check .github/ISSUE_TEMPLATE.md!",
  ],
  [
    [HttpError: Validation error: {"foo":true}],
  ],
]
`;

exports[`create-a-github-issue updates an existing open issue with the same title 1`] = `
{
  "assignees": [
    "octocat",
    "JasonEtco",
  ],
  "body": "Goodbye!",
  "labels": [],
  "milestone": 1,
  "title": "Hello!",
}
`;
